--- a/screens/about/style/style.css
+++ b/screens/about/style/style.css
@@ -16,7 +16,7 @@ body {
     position: relative;
     width: 100%;
     height: fit-content;
-    background-color: #f1c40f;
+    background-color: #9bc0e7;
     border-radius: 20px;
     display: flex;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
