--- a/screens/city/style/section.css
+++ b/screens/city/style/section.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c9f2d9;
+    background-color: #a5dbba;
 }
 
 .section-image-border {
