--- a/screens/about/style/about.css
+++ b/screens/about/style/about.css
@@ -1,6 +1,6 @@
 .card-about {
     position: relative;
-    background-color: #78909c;
+    background-color: #8d8b74fb;
     width: 100%;
     margin-top: 20px;
     height: 800px;
